<resources>
    <string name="app_name">Mid Ulster Football League</string>
    <string name="enter_password">Enter password</string>
    <string name="button_login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="button_register">Register</string>
    <string name="button_fixtures">See fixtures and results</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="team_name">Team Name</string>
    <string name="btn_register">Register</string>
    <string name="enter_name">Enter full name</string>
    <string name="position">Position</string>
    <string name="goals">GF:GA</string>
    <string name="played">Played</string>
    <string name="points">Points</string>
    <string name="Position" />
    <string name="Goals" />
    <string name="Played" />
    <string name="Points" />
    <string name="team" />
    <string name="input_placeholder">Write a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
